--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
   </div> 
 
 <script src="https://code.jquery.com/jquery-2.1.1.min.js" type="text/javascript"></script>
-<script src="readJson.js"></script>        
+<script src="./readJson.js"></script>        
 </body>
 </html>
